--- a/sass/components/sidebar.scss
+++ b/sass/components/sidebar.scss
@@ -5,7 +5,7 @@
   border-right: 1px solid $border-color;
   transition: left .3s ease-in-out;
   background: white;
-  z-index: 10;
+  z-index: 20;
 
   &.visible {
     left: 0;
